# JSON_parser

./: CMakeLists.txt
Test/: CMakeLists.txt  JSONParserTest.cpp  script_test.sh
resources/: smthCool.json  smthCool.txt
src/: JSONParser.cpp  JSONParser.h  main.cpp
